--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.10.0",
     "babel-eslint": "^8.2.5",
-    "botbuilder": "^3.13.1",
-    "botbuilder-azure": "^3.0.4",
+    "botbuilder": "^3.15.0",
+    "botbuilder-azure": "^3.1.0",
     "eslint": "^5.0.1",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^7.10.0",
     "restify": "^5.2.1"
   },
   "devDependencies": {
-    "request": "^2.81.0",
-    "zip-folder": "^1.0.0"
+    "request": "^2.81.0"
   }
 }
