--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "azure-storage": "^2.10.0",
     "botbuilder": "^3.15.0",
     "botbuilder-azure": "^3.1.0",
+    "cheerio": "^1.0.0-rc.2",
     "eslint": "^5.1.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^7.10.0",
     "restify": "^5.2.1"
   },
   "devDependencies": {
-    "request": "^2.81.0"
+    "request": "^2.87.0"
   }
 }
